# deutschmeister

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  slack-manifest.json
alembic/: env.py
alembic/versions/: 19b1df38d464_initial_schema.py
app/: main.py
app/agent/prompts/: chat_tutor_system.txt  exercise_generation.txt  pronunciation_assessment.txt  tutor_system.txt
app/api/routes/: chat.py  exercises.py  profiles.py  pronunciation.py  slack.py  vocabulary.py  voice.py
app/core/: config.py  database.py
app/models/: db.py
app/schemas/: structured_outputs.py
app/services/: curriculum_engine.py  daily_reminder.py  fsrs_engine.py  gemini_live_proxy.py  gemini_pronunciation.py  gemini_service.py  interleaved_scheduler.py  session_analyzer.py  tool_handlers.py
app/static/: audio-processor.js  session.html
app/utils/: audio.py
scripts/: build_vocab_db.py  generate_b2_vocab.py  test_brain_integration.py  test_vocab_db.py  test_ws_e2e.py  vocab_seed.json
tests/test_services/: test_gemini_ws_mock.py
